added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML is a computer language (code) use for content structure on a webpage. See it as the building frame of a house for a website. It is composed of multiple elements such as Head (Data defining our webpage);  Body (contains all the content related to the HTML document, i.e: headings, paragraphs, hyperlinks, lists, images). </li>
+          <li> The head element contains information about the webage.</li>
+          <li> The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A: adds new files in your directory</li>
+          <li>git commit -m branche-name: commit your changes to your working directory with an associated message</li>
+          <li>git push origin feature/branche-name: push the local branch to Github</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
