--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,18 +25,22 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here</li>
+          <li>CSS is composed of selector and property which defines the rules the elements/attributes will follow.  </li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>"*" selector is used to apply a rule to all elements visible on the webpage.
+          <li>Text-align is used for positionning.</li>
         </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A: adds new files in your directory</li>
-          <li>git commit -m branche-name: commit your changes to your working directory with an associated message</li>
-          <li>git push origin feature/branche-name: push the local branch to Github</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git add -A: adds new files in your directory.</li>
+          <li>git commit -m branche-name: commit your changes to your working directory with an associated message.</li>
+          <li>git push origin feature/branche-name: push the local branch to Github.</li>
         </ul>
       </section>
    
