--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>An array is a data structure consisting of a collection of elements (values or variables), each identified by at least one array index or key.</li>
+          <li> A "For" Loop is used to repeat a specific block of code a known number of times.</li>
+          <li>A function is simply a block of code that you can use over and over again, rather than writing it out multiple times.</li>
         </ul>
       </section>
     </main>
