--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>HTML is a computer language (code) use for content structure on a webpage. See it as the building frame of a house for a website. It is composed of multiple elements such as Head (Data defining our webpage);  Body (contains all the content related to the HTML document, i.e: headings, paragraphs, hyperlinks, lists, images). </li>
-          <li> The head element contains information about the webage.</li>
+          <li> HTML is a computer language (code) use for content structure on a webpage. See it as the building frame of a house for a website. It is composed of multiple elements such as Head (Data defining our webpage);  Body (contains all the content related to the HTML document, i.e: headings, paragraphs, hyperlinks, lists, images). </li>
+          <li> The head element contains information about the webpage.</li>
           <li> The body element represents the visible content shown to the user.</li>
         </ul>
       </section>
@@ -26,6 +26,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.</li>
           <li>CSS is composed of selector and property which defines the rules the elements/attributes will follow.  </li>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
@@ -37,6 +38,7 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
+          <li>Git is a set of command line utility programs that are designed to execute on a command-line environment (Terminal on MacOS).</li>
           <li>git status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
           <li>git add -A: adds new files in your directory.</li>
@@ -48,10 +50,11 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
+          <li>JavaScript, often abbreviated as JS, is a programming language of the internet used by programmers to create dynamic and interactive web content like applications and browsers.</li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>An array is a data structure consisting of a collection of elements (values or variables), each identified by at least one array index or key.</li>
-          <li> A "For" Loop is used to repeat a specific block of code a known number of times.</li>
+          <li>A "For" Loop is used to repeat a specific block of code a known number of times.</li>
           <li>A function is simply a block of code that you can use over and over again, rather than writing it out multiple times.</li>
         </ul>
       </section>
